syntax = "proto3";
package  org.axesoft.jaxos.network.protobuff;

option java_outer_classname="PaxosMessage";

enum Code {
  NONE = 0;
  
  HEARTBEAT_REQ = 1;
  HEARTBEAT_RES = 2;
  
  PREPARE_REQ = 3;
  PREPARE_RES = 4;
  ACCEPT_REQ = 5;
  ACCEPT_RES = 6;
  
  ACCEPTED_NOTIFY = 7;
  ACCEPTED_ACK = 8;

  NOOP=10;

  LEARN_REQ = 11;
  LEARN_RES = 12;
}

message DataGram {
  Code code = 1;
  int32 sender = 2;
  int32 squadId = 3;
  int64 instanceId = 4;
  int32 round = 5;
  bytes body = 6;
}

message PrepareReq {
  int32 ballot = 1;
}


message PrepareRes {
  int32 result = 1;
  int32 maxBallot = 2;
  int32 acceptedBallot = 3;
  bytes acceptedValue = 4;
  int64 chosenInstanceId = 5;
}

message AcceptReq {
  int32 ballot = 1;
  bytes value = 2;
}

message AcceptRes {
  int64 chosenInstanceId = 1;
  int32 result = 2;
  int32 maxBallot = 3;
}


message LearnReq {
  int64 highInstanceId = 1;
}

message LearnRes {
  repeated InstanceRecord records = 1;
}

message InstanceRecord {
  int64 instanceId = 1;
  bytes value = 2;
}